tests/ui-fulldeps/rustc-dev-remap.remap-unremap.stderr
error[E0277]: the trait bound `NotAValidResultType: VisitorResult` is not satisfied
  --> $DIR/rustc-dev-remap.rs:LL:COL
   |
LL |     type Result = NotAValidResultType;
   |                   ^^^^^^^^^^^^^^^^^^^ the trait `VisitorResult` is not implemented for `NotAValidResultType`
   |
   = help: the following other types implement trait `VisitorResult`:
             ()
             ControlFlow<T>
note: required by a bound in `rustc_ast::visit::Visitor::Result`
  --> $COMPILER_DIR_REAL/rustc_ast/src/visit.rs:LL:COL
   |
LL |     type Result: VisitorResult = ();
   |                  ^^^^^^^^^^^^^ required by this bound in `Visitor::Result`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
